--- a/database/python/2020/11090.yaml
+++ b/database/python/2020/11090.yaml
@@ -1,6 +1,6 @@
----
+n---
 cve: 2020-11090
-title: CVE in indy-plenum
+title: CVE in indy-node
 description: >
     In Indy Node 1.12.2, there is an Uncontrolled Resource Consumption vulnerability. Indy Node has a bug in TAA handling code. The current primary can be crashed with a malformed transaction from a client, which leads to a view change. Repeated rapid view changes have the potential of bringing down the network. This is fixed in version 1.12.3.
 cvss_v2: 5.0
@@ -9,9 +9,8 @@ references:
     - https://github.com/hyperledger/indy-node/security/advisories/GHSA-3gw4-m5w7-v89c
     - https://pypi.org/project/indy-node/1.12.3/
 affected:
-    - name: indy-plenum
+    - name: indy-node
       version:
-        - "<=1.12.2rc1,1.12.2"
+        - "==1.12.2"
       fixedin:
-        - ">=1.12.3rc1"
-        - "<=1.12.1rc1,0.0.1"
+        - ">=1.12.3"
